Changes for 1.8.21rc1

...G...PS. [ZBX-8343] fixed a bug in binary heap that could cause a slightly inconsistent ordering of elements in the queue (asaveljevs)
...G...... [ZBX-8198] decreased verbosity of Windows agent with DebugLevel=4 (Nikolaj)
A.F....... [ZBX-7930] improved SQL performance and execution time in Maintenance page (Ivo)

Changes for 1.8.20

1.8.20rc2 was released as 1.8.20 without any changes

Changes for 1.8.20rc2

A......... [ZBX-7693] fixed admin user being able to update media for other users (Pavels)
..F....... [ZBX-6721] fixed LDAP bind password being included in page source (Eduard)

Changes for 1.8.20rc1

A......... [ZBX-7703] fixed being able to switch users without proper credentials when using HTTP authentication (Pavels)
.......PS. [ZBX-7686] fixed UTF-8 strings not being fetched fully from Oracle (asaveljevs)
..F....... [ZBX-7643] fixed graph copying (Eduard)
A......... [ZBX-3702] fixed drule.get selectDChecks parameter not returning any results; thanks to Sergey Sireskin (Pavels)
...G...PS. [ZBX-4243] fixed Zabbix syslog application names (RFC 5424 APP-NAME) (Andris)

Changes for 1.8.19

1.8.19rc1 was released as 1.8.19 without any changes

Changes for 1.8.19rc1

...G...... [ZBX-7479] fixed remote command execution from Zabbix server if flexible user parameters are configured; thanks to Recurity Labs Team for the report (Sasha)
....I..... [ZBXNEXT-1256] changed example directory size user parameter to return bytes (Richlv)
..F....... [ZBX-7156] fixed string value escaping in profiles (Eduard)
...G...... [ZBX-4658] fixed system.boottime and system.uptime returning bogus values on Solaris when agent is compiled as a 64-bit binary (asaveljevs)
........S. [ZBX-7119] fixed data collection stopping after no data maintenance until configuration cache is updated (asaveljevs)
..F....... [ZBX-7074] fixed incorrectly parsed trigger expression in trigger wizard (Vitalij)

Changes for 1.8.18

1.8.18rc1 was released as 1.8.18 without any changes
